# learning_langgraph

./: README.md  pyproject.toml  requirements.txt
ChatBot/: backend.py  frontend.py  frontend_streaming.py
advance_topics/: basic_chatbot.ipynb  persistence.ipynb
workflows/: 02_parallel_workflow_intro.ipynb  03_conditional_workflow.ipynb  04_iterative_workflows.ipynb  1.1_simple_llmworkflow.ipynb  1.2_prompt_chaining.ipynb  1_workflow_intro.ipynb  2.1_parallel_llm_workflow.ipynb
