[project]
name = "langgraph-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
